src/gui/util/qvalidator.h
@@ -142,7 +142,8 @@ public:
     QValidator::State validate(QString &, int &) const override;
     void fixup(QString &input) const override;
 
-    void setRange(double bottom, double top, int decimals = 0);
+    void setRange(double bottom, double top, int decimals);
+    void setRange(double bottom, double top);
     void setBottom(double);
     void setTop(double);
     void setDecimals(int);
